Closed
Bug 1678361
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::EditorEventListener::RefuseToDropAndHideCaret]
Categories
(Core :: DOM: Editor, defect)
Tracking
()
RESOLVED
FIXED
85 Branch
People
(Reporter: sefeng, Assigned: saschanaz)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/1c21240c-ec6f-49f5-a480-454ea0201118
Reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
Top 6 frames of crashing thread:
0 XUL mozilla::EditorEventListener::RefuseToDropAndHideCaret editor/libeditor/EditorEventListener.cpp:811
1 XUL mozilla::EditorEventListener::DragOverOrDrop editor/libeditor/EditorEventListener.cpp
2 XUL mozilla::EditorEventListener::DragEnter editor/libeditor/EditorEventListener.cpp:799
3 XUL mozilla::EditorEventListener::HandleEvent editor/libeditor/EditorEventListener.cpp:349
4 XUL XUL@0x2d1f44f
5 XUL mozilla::EventListenerManager::HandleEventInternal dom/events/EventListenerManager.cpp:1088
This looks like a null pointer crash. Not very frequent though.
Assignee | ||
Comment 1•5 years ago
|
||
DragEvent::GetDataTransfer() is fallible when memory allocation fails as it lazily constructs DataTransfer. This tries failing gracely when that happens.
Updated•5 years ago
|
Assignee: nobody → krosylight
Status: NEW → ASSIGNED
Assignee | ||
Updated•5 years ago
|
Severity: -- → S3
Pushed by krosylight@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/19bed19b33b1
Return gracely when GetDataTransfer fails r=masayuki
Comment 3•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox85:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
Updated•5 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•